Remove weird highlighting bug on iOS Safari

--- a/src/styles/base/generic.css
+++ b/src/styles/base/generic.css
@@ -31,6 +31,15 @@ hr {
   border-bottom: 1px solid hsla(0, 0%, 0%, 0.2);
 }
 
+/* For some reason the main div highlights on touch in iOS Safari */
+[tabindex='-1'] {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+[tabindex='-1'] > * {
+  -webkit-tap-highlight-color: initial;
+}
+
 @media screen and (min-width: 768px) {
   a:hover {
     opacity: 0.5;
